gcc/testsuite/g++.dg/diagnostic/ref3.C
int& i __attribute__((unused));  // { dg-error "6:.i. declared as reference" }
